# evidence-core

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
evidence_core/: __init__.py  cli.py  geojson.py  location.py  manifest.py  media.py  probe.py
schema/: evidence-v1.manifest.json
tests/: test_core.py
